ont-api: major: remove possibility to expand plain annotations, refactor and change ont-statement, changes in manager, fix ont-api tests, add test for loadAnnotations conf setting. stats: 4902/115/44